[package]
name = "andex"
description = "Safe, strongly typed array indexes and wrappers for rust with zero dependencies"
version = "0.0.12"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/andex"
repository = "https://github.com/lpenz/andex"

[dev-dependencies]
anyhow = "1.0.42"
